gauge-taiko/gauge-taiko-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gauge-taiko
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gauge-taiko
  template:
    metadata:
      labels:
        app: gauge-taiko
    spec:
      # Volumes used by this deployment
      volumes:
      - name: reports
        # This volume is based on PVC
        persistentVolumeClaim:
          # Name of the PVC created earlier
          claimName: gauge-taiko-reports-pv-claim
      containers:
      - name: gauge-taiko
        image: donatoverardi/gauge-taiko:v1.0.0
        volumeMounts:
        # Volume 'reports' is mounted to path '/gauge/reports'
        - name: reports
          mountPath: "/gauge/reports"
        #ports:
        #- containerPort: 8080
        #env:
        #- name: MESSAGE
        #  value: Donato just deployed this on Openshift!
