gauge-taiko/gauge-taiko-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gauge-taiko
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: gauge-taiko
